kube/components/steampipe/steampipe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: steampipe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: steampipe
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: steampipe
    spec:
      containers:
      - name: steampipe
        image: turbot/steampipe:0.21.8
        command: [ "/bin/sh", "-c" ]
        args:
          - |
            echo "Installing steampipe plugins"
            steampipe plugin install net
            steampipe plugin install github
            steampipe plugin install bitbucket
            steampipe plugin install updown
            steampipe plugin install code
            steampipe plugin install config
            echo "Plugin installation complete"
            /usr/local/bin/docker-entrypoint.sh steampipe service start --foreground --database-listen=network --database-password=steampipe123
        #command: ["/usr/local/bin/docker-entrypoint.sh"]
        #args: [ "steampipe", "service", "start", "--foreground", "--database-listen=network", "--database-password=steampipe123" ]
        ports: 
          - containerPort: 9193
            name: steampipe
        volumeMounts:
          - name: steampipe-configmap-volume
            mountPath: /home/steampipe/.steampipe/config/bitbucket.spc
            subPath: bitbucket.spc
          - name: steampipe-configmap-volume
            mountPath: /home/steampipe/.steampipe/config/github.spc
            subPath: github.spc
          - name: steampipe-configmap-volume
            mountPath: /home/steampipe/.steampipe/config/net.spc
            subPath: net.spc
          - name: steampipe-configmap-volume
            mountPath: /home/steampipe/.steampipe/config/ip2locationio.spc
            subPath: ip2locationio.spc
          - name: init-install-volume
            mountPath: /home/steampipe/.steampipe/plugins/hub.steampipe.io/plugins/turbot
      hostAliases:
        - hostnames:
            - "steampipe"
          ip: "127.0.0.1"
      volumes:
        - name: steampipe-configmap-volume
          configMap:
            name: steampipe-configmap
        - name: init-install-volume
          emptyDir: { }
