kube/components/steampipe/steampipe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: steampipe
  labels:
    app: steampipe
spec:
  type: NodePort
  ports:
    - name: https
      port: 9193
      targetPort: 9193
      nodePort: 30193
      protocol: TCP
  selector:
    app: steampipe
